--- a/src/output.css
+++ b/src/output.css
@@ -183,6 +183,9 @@
   }
 }
 @layer utilities {
+  .\@container {
+    container-type: inline-size;
+  }
   .collapse {
     visibility: collapse;
   }
@@ -261,6 +264,21 @@
   .w-5 {
     width: calc(var(--spacing) * 5);
   }
+  .w-20 {
+    width: calc(var(--spacing) * 20);
+  }
+  .w-sm {
+    width: var(--container-sm);
+  }
+  .w-xl {
+    width: var(--container-xl);
+  }
+  .w-xs {
+    width: var(--container-xs);
+  }
+  .max-w-2xs {
+    max-width: var(--container-2xs);
+  }
   .max-w-3xs {
     max-width: var(--container-3xs);
   }
@@ -273,14 +291,26 @@
   .max-w-xl {
     max-width: var(--container-xl);
   }
+  .max-w-xs {
+    max-width: var(--container-xs);
+  }
   .min-w-2xl {
     min-width: var(--container-2xl);
+  }
+  .min-w-2xs {
+    min-width: var(--container-2xs);
   }
   .min-w-3xs {
     min-width: var(--container-3xs);
   }
   .min-w-10 {
     min-width: calc(var(--spacing) * 10);
+  }
+  .min-w-20 {
+    min-width: calc(var(--spacing) * 20);
+  }
+  .min-w-32 {
+    min-width: calc(var(--spacing) * 32);
   }
   .min-w-lg {
     min-width: var(--container-lg);
@@ -427,6 +457,43 @@
       content: var(--tw-content);
       --tw-content: '*';
       content: var(--tw-content);
+    }
+  }
+  .sm\:w-32 {
+    @media (width >= 40rem) {
+      width: calc(var(--spacing) * 32);
+    }
+  }
+  .sm\:min-w-2xs {
+    @media (width >= 40rem) {
+      min-width: var(--container-2xs);
+    }
+  }
+  .md\:w-32 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 32);
+    }
+  }
+  .lg\:w-2xs {
+    @media (width >= 64rem) {
+      width: var(--container-2xs);
+    }
+  }
+  .lg\:w-32 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 32);
+    }
+  }
+  .\@max-xs\:w-32 {
+    @container (width < 20rem) {
+      width: calc(var(--spacing) * 32);
+    }
+  }
+  .\@max-xs\:md\:w-32 {
+    @container (width < 20rem) {
+      @media (width >= 48rem) {
+        width: calc(var(--spacing) * 32);
+      }
     }
   }
 }
